# synf

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE  Makefile.toml  install.sh  readme.md  release.toml  synf.toml
.github/workflows/: build.yaml
examples/golang/: synf.toml
examples/kotlin/: synf.toml
examples/python/: pyproject.toml  synf.toml
examples/python/src/mcp_server_test/: __init__.py
examples/typescript/: package-lock.json  package.json  synf.toml
examples/typescript/src/: index.ts
scoop/: synf.json  update-manifest.sh
src/: config.rs  init.rs  main.rs  runner.rs  utils.rs
