[project]
name = "mcp-server-test"
version = "0.0.1"
description = "A simple MCP server"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pyright>=1.1.389"]

[project.scripts]
mcp-server-test = "mcp_server_test:main"


